# rust-in-action

./: Cargo.toml  shell.nix
chapter_2/: 2_12_mandelbrot.rs  2_18_grep_lite.rs  2_1_ok.rs  2_20_manual_increment.rs  2_21_defining_arrays.rs  2_24_grep_lite.rs  2_26_grep_lite.rs  2_28_file_bufreader.rs  2_2_add.rs  2_3_numbers.rs  2_4_bases.rs  2_5_try_into.rs  2_6_complex.rs  2_7_while.rs  2_8_match.rs  Cargo.toml
